<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:padding="30dp"

    tools:context=".StartUpScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_outline_lens_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_extrabold"
            android:gravity="center"
            android:text="@string/heading"
            android:textColor="#000"
            android:textSize="36sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_semibold"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="#000"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callloginscreen"
                android:background="#25CCF7"
                android:transitionName="transition_login"
                android:text="@string/logi_in"
                android:textColor="#000" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="callnextSignupscreennew"
                android:background="#25CCF7"
                android:text="@string/sign_in"
                android:transitionName="transition_singn"

                android:textColor="#000" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>