<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.e.Login.ForgetPasswordSuccesMessage">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        android:padding="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:fontFamily="@font/muli_extrabold"
            android:textColor="@color/colorblack"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:layout_marginTop="-80dp"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/updated_tick"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passeord_updated_success"
            android:fontFamily="@font/muli_semibold"
            android:textColor="@color/colorblack"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#039BE5"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorblack"/>

    </LinearLayout>


</LinearLayout>