<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context="com.e.Login.VerifyOTP">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24"
            android:padding="5dp"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textSize="100sp"
            android:textColor="@color/colorblack"
            android:fontFamily="@font/muli_extrabold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textSize="24sp"
            android:textColor="@color/colorblack"
            android:fontFamily="@font/muli_extrabold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/otp_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textSize="16sp"
            android:textColor="@color/colorblack"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center" />
        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:lineColor="#AB000000"
            android:itemBackground="#E3E3E3"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="@color/colorblack"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#039BE5"
            android:text="Verify Code"
            android:onClick="callNextscreenfromOTP"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorblack"/>



    </LinearLayout>


</ScrollView>