<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.e.Login.ForgetPassword"
    android:background="@color/colorwhite"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/forgetback_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="156dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/forgetpasswordlock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/Forgetpassword"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textColor="@color/colorblack"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/forget_password_detail"
            android:textAlignment="center"
            android:textColor="@color/colorblack"
            android:textSize="18sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxStrokeColor="@color/colorblack"
            app:boxBackgroundColor="#E3E3E3"
            android:hint="Enter Email"
            app:startIconDrawable="@drawable/ic_email_24"
            app:startIconTint="@color/colorblack"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorblack"
            android:textColorHint="@color/colorblack">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_butn"
            android:background="#039BE5"
            android:onClick="gotoselectonscreen"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>