<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.e.Login.Login"
    android:background="#03A9F4"
    android:transitionName="transition_login"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginback_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#0B0B0B"
            android:textSize="40sp"
            android:fontFamily="@font/muli_extrabold"
            android:textAllCaps="true"
            android:layout_marginTop="50dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_code_picker"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorwhite"
                android:padding="8dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:id="@+id/login_phonenumber"
                android:layout_below="@id/login_code_picker"
                app:startIconDrawable="@drawable/ic_phone_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconTint="#000"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:endIconMode="clear_text"
                app:endIconTint="#000"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#000">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phonenumber"
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:hintTextColor="#000"
                app:boxStrokeColor="#000"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="#000"
                app:endIconMode="password_toggle"
                app:endIconTint="#000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_below="@id/login_password"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/Remember_me"
                    android:buttonTint="#000"
                    android:textColor="#000"
                    android:layout_centerVertical="true"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forgetpassword"
                    android:background="#00000000"
                    android:onClick="gotoforgetpasswordscreen"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/lettheuserlogin"
                android:onClick="letUserLoggedIn"
                android:layout_below="@id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="#000"
                android:textColor="#F6F4F4"
                android:layout_marginTop="20dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Createaccount"
                android:background="#00000000"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/lettheuserlogin"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/whitecircle"
                android:elevation="8dp"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
            </RelativeLayout>
    </RelativeLayout>
    </LinearLayout>
</ScrollView>