<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.e.Login.ForgetPassword"
    android:background="@color/colorwhite"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/forgetback_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"
            android:padding="5dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textColor="@color/colorblack"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/make_selectiom_detail"
            android:textAlignment="center"
            android:textColor="@color/colorblack"
            android:textSize="18sp" />
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:layout_marginTop="50dp"
           android:background="#E3E3E3"
           android:padding="10dp">

           <ImageView
               android:id="@+id/mobile_icon"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:src="@drawable/phone"
               android:layout_centerVertical="true"
               android:layout_marginRight="20dp"/>

           <TextView
               android:id="@+id/mobile_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:fontFamily="@font/muli"
               android:text="@string/via_sms"
               android:textAlignment="center"
               android:textColor="@color/colorblack"
               android:layout_toRightOf="@id/mobile_icon"
               android:layout_marginTop="35dp"
               android:textSize="25sp"
               />


           <TextView
               android:id="@+id/mobile_description"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/mobile_title"
               android:layout_gravity="center"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="19dp"
               android:layout_toRightOf="@id/mobile_icon"
               android:fontFamily="@font/muli"
               android:text="+6300037514"
               android:textAlignment="center"
               android:textColor="@color/colorblack"
               android:textSize="25sp" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#00000000"
               />



       </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="#E3E3E3"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mail"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                android:text="@string/via_email"
                android:textAlignment="center"
                android:textColor="@color/colorblack"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="35dp"
                android:textSize="25sp"
                />


            <TextView
                android:id="@+id/mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_title"
                android:layout_gravity="center"
                android:layout_marginLeft="-11dp"
                android:layout_marginTop="19dp"
                android:layout_toRightOf="@id/mail_icon"
                android:fontFamily="@font/muli"
                android:text="Support@email.com"
                android:textAlignment="center"
                android:textColor="@color/colorblack"
                android:textSize="25sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                />


        </RelativeLayout>


    </LinearLayout>

</ScrollView>